tests/cases/fail_struct_primitive.rs
use strict_typing::strict_types;

#[strict_types]
struct Bad {
    count: u32,
}

fn main() {}
